tests/baselines/reference/privateNamesIncompatibleModifiersJs.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(3,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(8,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(13,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(18,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(23,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(28,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(33,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(37,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(42,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(46,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(51,7): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js(55,8): error TS18010: An accessibility modifier cannot be used with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiersJs.js (12 errors) ====
    class A {
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #a = 1;
    
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #b = 1;
    
        /**
         * @protected
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #c = 1;
    
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #aMethod() { return 1; }
    
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #bMethod() { return 1; }
    
        /**
         * @protected
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #cMethod() { return 1; }
    
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #aProp() { return 1; }
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #aProp(value) { }
    
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #bProp() { return 1; }
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #bProp(value) { }
    
        /**
        * @protected
          ~~~~~~~~~~
        */
    ~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #cProp() { return 1; }
        /**
         * @protected
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #cProp(value) { }
    }
    